basis for creating sportsgame

--- a/www/templates/tasks/task_choose_AQ_SP.html
+++ b/www/templates/tasks/task_choose_AQ_SP.html
@@ -14,7 +14,7 @@
                     <div class="task_t gref_t">
                         <div class="picture"> <img src="./img/icons/sports.png" /></div>
                         <div class="description">
-                            <h2>GeoReference Game</h2></div>
+                            <h2>Sports - Workout Game</h2></div>
                     </div>
                 </a>
             </div>
