--- a/www/templates/tasks/quest_type.html
+++ b/www/templates/tasks/quest_type.html
@@ -94,5 +94,5 @@
     </div>
 
     </ion-content>
-     <a class="skip_b" ng-click = "noTask()"><p style="<colo></colo>r:white;">CANCEL</p></a>
+     <a class="skip_b" ng-click = "closeModal()"><p style="<colo></colo>r:white;">CANCEL</p></a>
 </ion-modal-view>
