--- a/www/templates/acc/acc-mynewgame.html
+++ b/www/templates/acc/acc-mynewgame.html
@@ -1,26 +1,20 @@
 <ion-view view-title="{{currentAction}}">
+
     <ion-content>
         <div class="game-backg">
             <h2>{{currentAction}}</h2>
-            <div class="game-type">
-
-                <button class="button icon-right ion-location" style="background-color:#2196F3" ui-sref="tab.aidnavig" ng-click="aidGame()" style="color:black;">{{'follow_route' | translate}}</button>
-
-            </div>
             <button class="button button-fab button-fab-top-right button-positive icon ion-checkmark-round waves-effect waves-button waves-light" ng-click="submitGame()"></button>
             <button class="button button-fab button-fab-top-left button-positive icon ion-chevron-left waves-effect waves-button waves-light" ng-click="cancelGame()"></button>
         </div>
-        <label class="item item-input input-info" ng-class="border">
-            <span class="input-label">{{'game_title' | translate}}</span>
-            <input type="text" ng-model="newgame.title" placeholder="{{'game_title' | translate}}" required>
-        </label>
         <label class="item item-input input-info">
             <span class="input-label">{{'game_description' | translate}}</span>
             <input type="text" ng-model="newgame.description" placeholder="{{'short_description' | translate}}" required>
         </label>
         <label class="item item-input input-info">
-            <span class="input-label">{{'team_name' | translate}}</span>
-            <input type="text" ng-model="newgame.team" placeholder="{{'team_name' | translate}}" required>
+            <span class="input-label">Question</span>
+            <button class="button button-block button-positive" ng-click="addQAtask()">
+                Add a question
+            </button>
         </label>
 
         <ion-list>
