update delete basegame

--- a/www/templates/acc/acc-createdgames.html
+++ b/www/templates/acc/acc-createdgames.html
@@ -20,7 +20,7 @@
                     <p>{{item.description}}</p>
                 </div>
                 <div class="item item-body teachm_menu">
-                    <div class="teachm_b" ng-click="deleteItem(item,'{{item.name}}')">DELETE</div>
+                    <div class="teachm_b" ng-click="deleteBaseItem(item,'{{item.name}}')">DELETE</div>
                     <div class="teachm_b" ui-sref="acc.mynewgame" ng-click="editBaseItem(item)">EDIT</div>
                 </div>
             </a>
