--- a/www/css/gamecreation.css
+++ b/www/css/gamecreation.css
@@ -533,3 +533,50 @@ p {
     font-weight: 900;
     font-size: 2vh;
 }
+
+.addTask {
+    background-color:#009999;
+    display: table;
+}
+.addTask .description {
+    display: table-cell;
+    vertical-align:middle;
+    text-align:middle;
+}
+.addTask .description h2 {
+    width: 80%;
+}
+
+.addTeamname {
+  background: #FCC929;
+  border-radius: 25px;
+  border-style: solid;
+  border-width: 3px;
+  width: 40%;
+  height: 35%;
+  color: white;
+  box-shadow: 0 0 0 0;
+  font-family: 'Lato', sans-serif;
+  font-weight: 900;
+  font-size: 2vh;
+}
+.clearTeamname {
+  background: #ff1a1a;
+  border-radius: 25px;
+  border-style: solid;
+  border-width: 3px;
+  width: 25%;
+  height: 35%;
+  color: white;
+  box-shadow: 0 0 0 0;
+  font-family: 'Lato', sans-serif;
+  font-weight: 900;
+  font-size: 2vh;
+}
+.addTeam {
+  color: white;
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+  font-size: 6vh;
+  margin-bottom: 20px;
+}
