--- a/www/templates/acc/acc-chooseGameMode.html
+++ b/www/templates/acc/acc-chooseGameMode.html
@@ -9,9 +9,8 @@
             <!-- <div class="step_done" ng-show="done.game_mode"><img src="./img/icons/work-done.svg"></div> -->
             <div class="page_content">
                 <div class="content">
-                    <h2 style="color:white;">Choose Game Mode</h2>
                     <div class="act_conts">
-                      <button ng-click="createFFAgame()">create FFA gameschema</button>
+
                         <div class="act">
                             <a ng-click="chooseMode(1); playFFA()">
                                 <div class="act_cont" ng-class="{isChoosen: choose_mode == 1}">
@@ -41,6 +40,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div>
+              <button ng-click="createFFAgame()">create FFA gameschema</button>
             </div>
         </div>
     </ion-content>
