fix bug button on inviteuser

--- a/www/templates/profil-view.html
+++ b/www/templates/profil-view.html
@@ -6,30 +6,30 @@
         <!-- <button ng-click = "createFile()">ASDGFASDGASDG</button> -->
     </div>
     <ion-content style="height:90%;top:10%;">
-        <table>
-          <tr>
-            <td>First Name:</td>
-            <td>{{vm.user.firstName}}</td>
+        <table class="userData">
+          <tr class="userData">
+            <td class="userData">First Name:</td>
+            <td class="userData">{{vm.user.firstName}}</td>
           </tr>
-          <tr>
-            <td>Name:</td>
-            <td>{{vm.user.lastName}}</td>
+          <tr class="userData">
+            <td class="userData">Name:</td>
+            <td class="userData">{{vm.user.lastName}}</td>
           </tr>
-          <tr>
-            <td>Username:</td>
-            <td>{{vm.user.userName}}</td>
+          <tr class="userData">
+            <td class="userData">Username:</td>
+            <td class="userData">{{vm.user.userName}}</td>
           </tr>
-          <tr>
-            <td>e-mail:</td>
-            <td>{{vm.user.email}}</td>
+          <tr class="userData">
+            <td class="userData">e-mail:</td>
+            <td class="userData">{{vm.user.email}}</td>
           </tr>
-          <tr>
-            <td>Birthday:</td>
-            <td>{{vm.user.birthday}}</td>
+          <tr class="userData">
+            <td class="userData">Birthday:</td>
+            <td class="userData">{{vm.user.birthday}}</td>
           </tr>
-          <tr>
-            <td>Info:</td>
-            <td>{{vm.user.info}}</td>
+          <tr class="userData">
+            <td class="userData">Info:</td>
+            <td class="userData">{{vm.user.info}}</td>
           </tr>
         </table>
         <br>
