--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,12 +1,18 @@
 /* white Space Tab bug fix */
 
-table {
-    width:100%;
+table .userData {
+    width:30%;
     color:black;
     font-size:4vh;
     text-align: left;
 }
-tr, td {
+tr .userData {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin: 1px;
+    height: 8px;
+}
+td .userData {
     padding-top: 5px;
     padding-bottom: 5px;
     margin: 1px;
